# zzrjt-practice-project-emb-ai

./: pyproject.toml  server.py  test_sentiment_analysis.py
SentimentAnalysis/: sentiment_analysis.py
